# failure-first-job-queue

./: .gitignore  AGENTS.md  AGENT_CONTEXT.md  GLOSSARY.md  Makefile  README.md  pyproject.toml  taxonomy.md  todo.md
docs/: 00-scope.md  00_scope.md  01-invariants.md  01_invariants.md  02-state-model.md  02_state_model.md  03-failure-modes.md  03_failure_modes.md  03_policies.md  04_happy_path.md  failure_mode_index.md
failure_modes/: INDEX.md  __init__.py
failure_modes/FM_001_duplicate_retry/: scenario.py  spec.md
failure_modes/FM_001_duplicate_retry/tests/: test_prevent_fm001.py  test_recover_fm001.py  test_repro_fm001.py
failure_modes/template/: scenario.py  spec.md
failure_modes/template/tests/: test_prevent_fmxxx.py  test_repro_fmxxx.py
faults/: injectors.py
harness/: __init__.py  fixtures.py  runner.py
policies/: __init__.py  budget.py  circuit_breaker.py  commit.py  reconcile.py
postmortems/: PM_001_duplicate_execution.md
runtime/: clock.py  queue.py  store.py  worker.py
tests/: test_happy_path.py
